# robot-collector

./: README.md  main.py
detection_msgs/: CMakeLists.txt  package.xml
detection_msgs/msg/: AnnotationWithPose2D.msg  AnnotationWithTF.msg  CompressedImageWithAnnotationAndPose2D.msg  CompressedImageWithAnnotationAndTF.msg  YoloRect.msg
my_pkg/: CMakeLists.txt  package.xml
my_pkg/scripts/: my_prog.py
