<?xml version="1.0"?>
<package format="2">
  <name>detection_msgs</name>
  <version>0.0.1</version>
  <description>The detection_msgs package</description>

  <maintainer email="dimz94@mail.ru">Dmitry Zlobin</maintainer>

  <license>MIT</license>

  <author email="dimz94@mail.ru">Dmitry Zlobin</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_generation</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
